@@ -257,7 +257,7 @@ method-rgx=[a-z_][a-z0-9_]{2,}$
 method-name-hint=[a-z_][a-z0-9_]{2,}$
 
 # Regular expression which should only match function or class names that do
-# not require a docstring.
+# not require a docstring. Use ^(?!__init__$)_ to also check __init__.
 no-docstring-rgx=__.*__
 
 # Minimum line length for functions/classes that require docstrings, shorter
