@@ -65,6 +65,9 @@ Release date: TBA
 
   Closes #3031
 
+* Fix ``missing-function-docstring`` not being able to check ``__init__`` and other
+  magic methods even if the ``no-docstring-rgx`` setting was set to do so
+
 
 What's New in Pylint 2.11.2?
 ============================
